--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								
 								</div>
 								<span class="image object">
-									<img src="images/pic10.jpg" alt="" />
+									<img src="images/Main Photo.jpg" alt="" />
 								</span>
 							</section>
 
