--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/PCB.png" alt="PCB Design Image" width="180" height="180" style="margin-right: 160px;"></a>
+											<a href="notdeveloped.html" class="image" title="PCB Design and Manufacturing"><img src="images/PCB.png" alt="PCB Design Image" width="180" height="180" style="margin-right: 160px;"></a>
 											<div class="content">
 												<h3>PCB Design and Home Manufacturing</h3>
 												<p style= "color: #030303">I have been designing both single-layer & double-layer PCBs for more than 2 years which contains both through hole components as well as SMD components and been manufacturing these printed circuit boards in home setup.</p>
@@ -62,7 +62,7 @@
 											
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/3D design.png" alt="3D design and Printing Image" width="180" height="180" style="margin-right: 160px;"></a>
+											<a href="notdeveloped.html" class="image" title = "3D Design and Printing"><img src="images/3D design.png" alt="3D design and Printing Image" width="180" height="180" style="margin-right: 160px;"></a>
 											<div class="content">
 												<h3>3D Design and Printing</h3>
 												<p style= "color: #030303">I have been 3D designing working mechanism based models and printing them for more than 2 years. The models consists of many interconnected and functioning components </p>
@@ -72,7 +72,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Microcontroller.png" alt="Microcontroller Design Image" width="180" height="180" style="margin-right: 160px;" ></a>
+											<a href="notdeveloped.html" class="image" title ="Microcontrollers and SBCs"><img src="images/Microcontroller.png" alt="Microcontroller Design Image" width="180" height="180" style="margin-right: 160px;" ></a>
 											<div class="content">
 												<h3>Microcontrollers and SBCs</h3>
 												<p style ="color: #030303">I have been Working with hobbyist microcontrollers such as Arduino boards and ESP boards for more than 4 years. I have experience in designing my own systems with Raspberry Pi 4, Jetson Nano, Arduino and ESP Boards.</p>
@@ -82,7 +82,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Rapid Prototyping.png" alt="Prototype Image" width="180" height="180" style="margin-right: 160px;" ></a>
+											<a href="notdeveloped.html" class="image" title ="Rapid prototyping and Research"><img src="images/Rapid Prototyping.png" alt="Prototype Image" width="180" height="180" style="margin-right: 160px;" ></a>
 											<div class="content">
 												<h3>Rapid Prototyping & Research</h3>
 												<p style ="color: #030303">Working on a project, I aim towards thorough research on the topic and developing prototypes as fast as possible. This helps address design issues sooner and troubleshooting is easier. </p>
@@ -100,19 +100,19 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/Quadruped Thumbnail.jpg" alt="" /></a>
+											<a href="notdeveloped.html" class="image" title="Quadruped Robot"><img src="images/Quadruped Thumbnail.jpg" alt="" /></a>
 											<h3>Multi-Functional Quadruped Robot with Advanced Locomotion, Remote Operability and Cognitive Capabilities</h3>
 											<p style="color:#030303">Based on Raspberry Pi 4B, an Arduino Mega and an arduino Uno, an affordable and energy-efficient quadruped robot powered by 12 stepper motors equipped with advanced features like precise leg motion control, obstacle avoidance, and real-time video streaming. It also boasts object detection capabilities, making it suitable for applications such as surveillance and search and rescue.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="notdeveloped.html" class="button" title="Quadruped Robot">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Night-Guard 360.jpg" alt="" /></a>
+											<a href="notdeveloped.html" class="image" title="Surveillance Robot"><img src="images/Night-Guard 360.jpg" alt="" /></a>
 											<h3>Introducing The Night-Gaurd 360 Sentinel: Advance Autonomous Surveillance Robot</h3>
 											<p style="color:#030303">A compact security and monitoring robot powered by Raspberry Pi 4and Arduino Uno. It utilizes machine learning and autonomous mobility with live cameras for identifying individuals, guarding homes, and alerting to intruders via email and an electrical taser. Equipped with both regular and night vision cameras, the system is controlled through a user-friendly GUI and communicates via Wi-Fi, suitable for various applications, emphasizing safety.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="notdeveloped.html" class="button" title="Surveillance Robot">More</a></li>
 											</ul>
 										</article>
 									</div>
@@ -137,9 +137,8 @@
 											<li><a href="notdeveloped.html" target="_blank" class="fab fa-researchgate" title="ResearchGate" style="font-size: 25px; "></a></li>
 											<li><a href="notdeveloped.html" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 25px; ;"></a></li>
 											<li><a href="https://www.facebook.com/profile.php?id=100073217057451&mibextid=ZbWKwL" target="_blank" class="fab fa-facebook" title="Facebook" style="font-size: 25px;"></a></li>
-											<li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank" class="fas fa-file" title="Resume" style="font-size: 25px;"></a></li>
 										</ul>
-										<p style="font-size: 14px; text-align: left;"><b>Connect with me on social media and access my resume.</b></p>
+										<p style="font-size: 14px; text-align: left;"><b>Connect with me on social media</b></p>
 									</div>
 									
 								</div>
