--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/moeen-ul-islam-973736285" target="_blank" class="fab fa-linkedin" title="LinkedIn" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
                                         <li><a href="notdeveloped.html" target="_blank" class="fab fa-researchgate" title="ResearchGate" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
-                                        <li><a href="notdeveloped.html" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
+                                        <li><a href="https://github.com/moeen14" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
                                         <li><a href="https://www.facebook.com/profile.php?id=100073217057451&mibextid=ZbWKwL" target="_blank" class="fab fa-facebook" title="Facebook" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
                                         <li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank" class="fas fa-file" title="Resume" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
 									</ul>
@@ -144,7 +144,7 @@
 										<ul class="icons">
 											<li><a href="https://www.linkedin.com/in/moeen-ul-islam-973736285" target="_blank" class="fab fa-linkedin" title="LinkedIn" style="font-size: 25px; ;"></a></li>
 											<li><a href="notdeveloped.html" target="_blank" class="fab fa-researchgate" title="ResearchGate" style="font-size: 25px; "></a></li>
-											<li><a href="notdeveloped.html" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 25px; ;"></a></li>
+											<li><a href="https://github.com/moeen14" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 25px; ;"></a></li>
 											<li><a href="https://www.facebook.com/profile.php?id=100073217057451&mibextid=ZbWKwL" target="_blank" class="fab fa-facebook" title="Facebook" style="font-size: 25px;"></a></li>
 										</ul>
 										<p style="font-size: 14px; text-align: left;"><b>Connect with me on social media</b></p>
