--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 	<head>
 		<!-- Google tag (gtag.js) -->
-			<script async src="https://www.googletagmanager.com/gtag/js?id=G-XPZTR3LYF8"></script>
-			<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-XPZTR3LYF8"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-			gtag('config', 'G-XPZTR3LYF8');
+		gtag('config', 'G-XPZTR3LYF8');
 		</script>
+
 		<title>Portfolio Website of Moeen Ul Islam</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -30,11 +31,11 @@
 								<header id="header">
 									<a class="logo"><strong>Website</strong> by Moeen</a>
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/moeen-ul-islam-973736285" target="_blank" class="fab fa-linkedin" title="LinkedIn" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
-                                        <li><a href="notdeveloped.html" target="_blank" class="fab fa-researchgate" title="ResearchGate" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
-                                        <li><a href="https://github.com/moeen14" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
-                                        <li><a href="https://www.facebook.com/profile.php?id=100073217057451&mibextid=ZbWKwL" target="_blank" class="fab fa-facebook" title="Facebook" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
-                                        <li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank" class="fas fa-file" title="Resume" style="font-size: 20px; color: rgb(219, 41, 41);"></a></li>
+										<li><a href="https://www.linkedin.com/in/moeen-ul-islam-973736285" target="_blank" class="fab fa-linkedin" title="LinkedIn" style="font-size: 20px;"></a></li>
+                                        <li><a href="notdeveloped.html" target="_blank" class="fab fa-researchgate" title="ResearchGate" style="font-size: 20px;"></a></li>
+                                        <li><a href="https://github.com/moeen14" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 20px;"></a></li>
+                                        <li><a href="https://www.facebook.com/profile.php?id=100073217057451&mibextid=ZbWKwL" target="_blank" class="fab fa-facebook" title="Facebook" style="font-size: 20px;"></a></li>
+                                        <li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank" class="fas fa-file" title="Resume" style="font-size: 20px;"></a></li>
 									</ul>
 								</header>
 
@@ -179,7 +180,13 @@
 										<b>Thank you for your message. We'll get back to you soon.</b>
 									</div>
 								</div>
-							</section>			
+							</section>	
+
+							<footer id="footer" style="background-color: #333; padding: 10px;">
+								<p class="copyright" style="color: #fff; text-align: center; margin: 0;">
+									&copy; All rights reserved | Created by <b style ="color:rgb(255, 255, 255)">Moeen Ul Islam</b> | Built: Oct 28, 2023 | Last Updated: Nov 1, 2023
+								</p>
+							</footer>		
 						</div>
 					</div>
 
