projects + Acheivements (Part 2)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                         <li><a href="notdeveloped.html" target="_blank" class="fab fa-researchgate" title="ResearchGate" style="font-size: 20px;"></a></li>
                                         <li><a href="https://github.com/moeen14" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 20px;"></a></li>
                                         <li><a href="https://www.facebook.com/profile.php?id=100073217057451&mibextid=ZbWKwL" target="_blank" class="fab fa-facebook" title="Facebook" style="font-size: 20px;"></a></li>
-                                        <li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank" class="fas fa-file" title="Resume" style="font-size: 20px;"></a></li>
+                                        <li><a href="https://drive.google.com/file/d/17LY-CSfBv1PS7pn2vEMGtH5DsltEV3TL/view?usp=sharing" target="_blank" class="fas fa-file" title="Resume" style="font-size: 20px;"></a></li>
 									</ul>
 								</header>
 
@@ -110,19 +110,19 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="notdeveloped.html" class="image" title="Quadruped Robot"><img src="images/Quadruped Thumbnail.jpg" alt="" /></a>
+											<a href="projects.html" class="image" title="Quadruped Robot"><img src="images/Quadruped Thumbnail.jpg" alt="" /></a>
 											<h3>Multi-Functional Quadruped Robot with Advanced Locomotion, Remote Operability and Cognitive Capabilities</h3>
 											<p style="color:#030303">Based on Raspberry Pi 4B, an Arduino Mega and an arduino Uno, an affordable and energy-efficient quadruped robot powered by 12 stepper motors equipped with advanced features like precise leg motion control, obstacle avoidance, and real-time video streaming. It also boasts object detection capabilities, making it suitable for applications such as surveillance and search and rescue.</p>
 											<ul class="actions">
-												<li><a href="notdeveloped.html" class="button" title="Quadruped Robot">More</a></li>
+												<li><a href="projects.html" class="button" title="Quadruped Robot">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="notdeveloped.html" class="image" title="Surveillance Robot"><img src="images/Night-Guard 360.jpg" alt="" /></a>
+											<a href="projects.html" class="image" title="Surveillance Robot"><img src="images/Night-Guard 360.jpg" alt="" /></a>
 											<h3>Introducing The Night-Gaurd 360 Sentinel: Advance Autonomous Surveillance Robot</h3>
 											<p style="color:#030303">A compact security and monitoring robot powered by Raspberry Pi 4and Arduino Uno. It utilizes machine learning and autonomous mobility with live cameras for identifying individuals, guarding homes, and alerting to intruders via email and an electrical taser. Equipped with both regular and night vision cameras, the system is controlled through a user-friendly GUI and communicates via Wi-Fi, suitable for various applications, emphasizing safety.</p>
 											<ul class="actions">
-												<li><a href="notdeveloped.html" class="button" title="Surveillance Robot">More</a></li>
+												<li><a href="projects.html" class="button" title="Surveillance Robot">More</a></li>
 											</ul>
 										</article>
 									</div>
@@ -184,7 +184,7 @@
 
 							<footer id="footer" style="background-color: #333; padding: 10px;">
 								<p class="copyright" style="color: #fff; text-align: center; margin: 0;">
-									&copy; All rights reserved | Created by <b style ="color:rgb(255, 255, 255)">Moeen Ul Islam</b> | Built: Oct 28, 2023 | Last Updated: Nov 1, 2023
+									&copy; All rights reserved | Created by <b style ="color:rgb(255, 255, 255)">Moeen Ul Islam</b> | Built: Oct 28, 2023 | Last Updated: Nov 9, 2023
 								</p>
 							</footer>		
 						</div>
@@ -196,14 +196,14 @@
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Menu</h2>
+										<h2 style="color: #000000;">Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="notdeveloped.html">Projects</a></li>
-										<li><a href="notdeveloped.html">Achievements</a></li>
+										<li><a href="index.html" style="color: #000000;">Homepage</a></li>
+										<li><a href="projects.html" style="color: #000000;">Projects</a></li>
+										<li><a href="achievements.html" style="color: #000000;">Achievements</a></li>
 										<li>
-											<span class="opener">Competitions</span>
+											<span class="opener" style="color: #000000;">Competitions</span>
 											<ul>
 												<li><a href="notdeveloped.html" style="color: #000000;">Line Follower Robot</a></li>
 												<li><a href="notdeveloped.html" style="color: #000000;">Soccer Bot</a></li>
@@ -211,9 +211,9 @@
 												<li><a href="notdeveloped.html" style="color: #000000;">Poster Presentation</a></li>
 											</ul>
 										</li>
-										<li><a href="notdeveloped.html">Fields of Interest</a></li>
-										<li><a href="notdeveloped.html">Publications</a></li>
-										<li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank">Resume</a></li>
+										<li><a href="notdeveloped.html" style="color: #000000;">Fields of Interest</a></li>
+										<li><a href="notdeveloped.html" style="color: #000000;">Publications</a></li>
+										<li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank" style="color: #000000;">Resume</a></li>
 									</ul>
 								</nav>
 
@@ -224,21 +224,18 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="notdeveloped.html" title ="Achievements: Dean's Award" class="image"><img src="images/Best Project.jpg" alt="" /></a>
+											<a href="achievements.html" title ="Achievements: Dean's Award" class="image"><img src="images/Best Project.jpg" alt="" /></a>
 											<p><b>Awarded the "Deans Award" for the best Capstone Project</b></p>
 										</article>
 										<article>
-											<a href="notdeveloped.html" title ="Projects: Quadureped Robot" class="image"><img src="images/Quadruped Thumbnail.jpg" alt="" /></a>
+											<a href="projects.html" title ="Projects: Quadureped Robot" class="image"><img src="images/Quadruped Thumbnail.jpg" alt="" /></a>
 											<p><b>Multi-Functional Quadruped Robot with Advanced Locomotion, Remote Operability and Cognitive Capabilities</b></p>
 										</article>
 										<article>
-											<a href="notdeveloped.html" title ="Projects: Night-Guard 360 Sentinel" class="image"><img src="images/Night-Guard 360.jpg" alt="" /></a>
+											<a href="projects.html" title ="Projects: Night-Guard 360 Sentinel" class="image"><img src="images/Night-Guard 360.jpg" alt="" /></a>
 											<p><b>Introducing The Night-Guard 360 Sentinel: Advance Autonomus Surveillance Robot</b></p>
 										</article>
 									</div>
-									<ul class="actions">
-										<li><a href="notdeveloped.html" title ="Recent Events" class="button">More</a></li>
-									</ul>
 								</section>
 
 							  
