--- a/achievements.html
+++ b/achievements.html
@@ -151,7 +151,7 @@
                                     <!-- Project Details (2/3 of the screen) -->
                                     <div class="project-details" style="float: left; width: 66%;">
                                         <div id="image-container" style="position: relative;">
-                                            <img id="image" src="images/Achievements/Dean's Award/Image 01.PNG" alt="Image" width="600" height="400" />
+                                            <img id="image" src="images/Achievements/Dean's Award/Image 01.jpg" alt="Image" width="600" height="400" />
                                             <div>
                                                 <button id="prevButton" class="image-button" onclick="prevImage()">Prev</button>
                                                 <button id="nextButton" class="image-button" onclick="nextImage()">Next</button>
@@ -310,18 +310,18 @@
                         title: "Dean's Award for the Best Capstone Project (Summer 22-23)",
                         description: "We are thrilled to have been awarded the 'Dean's Award' for our exceptional eight-month-long dedication to the project titled 'Multi-Functional Quadruped Robot with Advanced Locomotion, Remote Operability, and Cognitive Capabilities.' This journey was a labor of love, and we extend our heartfelt thanks to our esteemed faculty members and mentors, particularly our suppervisor, Mr. Chowdhury Akram Hossain, Associate Professor and Department Head of CoE, and Dr. Shameem Ahmad, our External Supervisor and Assistant Professor, who played crucial roles in guiding us to success. It's a moment of gratitude and celebration, and I am personally humbled and thankful for the incredible opportunity and the unyielding spirit that brought this vision to life.",
                         images: [
-                            "images/Achievements/Dean's Award/Image 01.PNG",
-                            "images/Achievements/Dean's Award/Image 02.PNG",
-                            "images/Achievements/Dean's Award/Image 03.PNG",
-                            "images/Achievements/Dean's Award/Image 04.PNG",
+                            "images/Achievements/Dean's Award/Image 01.jpg",
+                            "images/Achievements/Dean's Award/Image 02.jpg",
+                            "images/Achievements/Dean's Award/Image 03.jpg",
+                            "images/Achievements/Dean's Award/Image 04.jpg",
                         ],                        
                     },
                     {
                         title: "Dean's List Honors for Academic Excellence",
                         description: "I am delighted to have been consistently recognized on the 'Dean's List Honors' for academic excellence in multiple semesters, including the Fall semesters of 20-21, 21-22, 22-23, and the Spring semesters of 20-21 and 21-22. This achievement reflects not only my dedication and hard work but also the unwavering support of my dedicated faculty and the camaraderie of my classmates. It's a testament to the belief that when you put your heart and soul into your academic journey, the rewards are bound to follow. I am deeply thankful for this recognition and excited to continue this journey of excellence.",
                         images: [
-                            "images/Achievements/Dean's List Honors/Image 01.PNG",
-                            "images/Achievements/Dean's List Honors/Image 02.PNG",
+                            "images/Achievements/Dean's List Honors/Image 01.jpg",
+                            "images/Achievements/Dean's List Honors/Image 02.jpg",
                         ],
                         
                         
