--- a/generic.html
+++ b/generic.html
@@ -76,7 +76,7 @@
 									</header>
 
 									<div id="image-container" style="position: relative;">
-										<img id="image" src="images/Projects/Quadruped Robot/Image 01.PNG" alt="Image" width="600" height="400" />
+										<img id="image" src="images/Projects/Quadruped Robot/Image 01.jpg" alt="Image" width="600" height="400" />
 										<button id="prevButton" class="image-button" onclick="prevImage()">Previous</button>
 										<button id="nextButton" class="image-button" onclick="nextImage()">Next</button>
 									</div>
@@ -198,9 +198,9 @@
 			<script>
 				// Define an array of image URLs
 				const imageUrls = [
-					"images/Projects/Quadruped Robot/Image 01.PNG",
-					"images/Projects/Quadruped Robot/Image 02.PNG",
-					"images/Projects/Quadruped Robot/Image 03.PNG",
+					"images/Projects/Quadruped Robot/Image 01.jpg",
+					"images/Projects/Quadruped Robot/Image 02.jpg",
+					"images/Projects/Quadruped Robot/Image 03.jpg",
 					// Add more image URLs as needed
 				];
 			
