--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<a href="notdeveloped.html" class="image" title="PCB Design and Manufacturing"><img src="images/PCB.png" alt="PCB Design Image" width="180" height="180" style="margin-right: 160px;"></a>
+											<a href="notdeveloped.html" class="image" title="PCB Design and Manufacturing"><img src="images/PCB.jpg" alt="PCB Design Image" width="180" height="180" style="margin-right: 160px;"></a>
 											<div class="content">
 												<h3>PCB Design and Home Manufacturing</h3>
 												<p style= "color: #030303">I have been designing both single-layer & double-layer PCBs for more than 2 years which contains both through hole components as well as SMD components and been manufacturing these printed circuit boards in home setup.</p>
@@ -72,7 +72,7 @@
 											
 										</article>
 										<article>
-											<a href="notdeveloped.html" class="image" title = "3D Design and Printing"><img src="images/3D design.png" alt="3D design and Printing Image" width="180" height="180" style="margin-right: 160px;"></a>
+											<a href="notdeveloped.html" class="image" title = "3D Design and Printing"><img src="images/3D design.jpg" alt="3D design and Printing Image" width="180" height="180" style="margin-right: 160px;"></a>
 											<div class="content">
 												<h3>3D Design and Printing</h3>
 												<p style= "color: #030303">I have been 3D designing working mechanism based models and printing them for more than 2 years. The models consists of many interconnected and functioning components </p>
@@ -82,7 +82,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="notdeveloped.html" class="image" title ="Microcontrollers and SBCs"><img src="images/Microcontroller.png" alt="Microcontroller Design Image" width="180" height="180" style="margin-right: 160px;" ></a>
+											<a href="notdeveloped.html" class="image" title ="Microcontrollers and SBCs"><img src="images/Microcontroller.jpg" alt="Microcontroller Design Image" width="180" height="180" style="margin-right: 160px;" ></a>
 											<div class="content">
 												<h3>Microcontrollers and SBCs</h3>
 												<p style ="color: #030303">I have been Working with hobbyist microcontrollers such as Arduino boards and ESP boards for more than 4 years. I have experience in designing my own systems with Raspberry Pi 4, Jetson Nano, Arduino and ESP Boards.</p>
@@ -92,7 +92,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="notdeveloped.html" class="image" title ="Rapid prototyping and Research"><img src="images/Rapid Prototyping.png" alt="Prototype Image" width="180" height="180" style="margin-right: 160px;" ></a>
+											<a href="notdeveloped.html" class="image" title ="Rapid prototyping and Research"><img src="images/Rapid Prototyping.jpg" alt="Prototype Image" width="180" height="180" style="margin-right: 160px;" ></a>
 											<div class="content">
 												<h3>Rapid Prototyping & Research</h3>
 												<p style ="color: #030303">Working on a project, I aim towards thorough research on the topic and developing prototypes as fast as possible. This helps address design issues sooner and troubleshooting is easier. </p>
