--- a/projects.html
+++ b/projects.html
@@ -152,7 +152,7 @@
                                     <!-- Project Details (2/3 of the screen) -->
                                     <div class="project-details" style="float: left; width: 66%;">
                                         <div id="image-container" style="position: relative;">
-                                            <img id="image" src="images/Projects/Quadruped Robot/Image 01.PNG" alt="Image" width="600" height="400" />
+                                            <img id="image" src="images/Projects/Quadruped Robot/Image 01.jpg" alt="Image" width="600" height="400" />
                                             <div>
                                                 <button id="prevButton" class="image-button" onclick="prevImage()">Prev</button>
                                                 <button id="nextButton" class="image-button" onclick="nextImage()">Next</button>
@@ -314,24 +314,24 @@
                         title: "Multi-Functional Quadruped Robot with Advance Locomotion, Remote Operability and Cognitive Capabilities",
                         description: "In recent years, quadruped robots have gained prominence due to their superior performance compared to wheeled counterparts in various domains. Despite their potential, existing consumer-level quadruped robots often suffer from high costs, component sourcing challenges, and increased power consumption. To address these limitations, this project presents a versatile quadrupedal robot with advanced locomotion, remote operability, and cognitive capabilities. It features a Raspberry Pi for computation, Arduino boards for motor control, and employs twin gear cycloidal drives with NEMA 17 stepper motors and inverse kinematics algorithms for precise leg movements, enabling diverse mobility and obstacle avoidance. The robot offers real-time video streaming, object detection using OpenCV and TensorFlow Lite, and a user-friendly GUI for manual control and human detection. Integration of GPS APIs enhances its utility in surveillance, monitoring, and search and rescue, all while maintaining affordability and sustainability through 3D printed components, ultimately resulting in an accessible and efficient quadruped robot.",
                         images: [
-                            "images/Projects/Quadruped Robot/Image 01.PNG",
-                            "images/Projects/Quadruped Robot/Image 02.PNG",
-                            "images/Projects/Quadruped Robot/Image 03.PNG",
-                            "images/Projects/Quadruped Robot/Image 04.PNG",
-                            "images/Projects/Quadruped Robot/Image 05.PNG",
-                            "images/Projects/Quadruped Robot/Image 06.PNG",
-                            "images/Projects/Quadruped Robot/Image 07.PNG",
-                            "images/Projects/Quadruped Robot/Image 08.PNG",
-                            "images/Projects/Quadruped Robot/Image 09.PNG",
-                            "images/Projects/Quadruped Robot/Image 10.PNG",
-                            "images/Projects/Quadruped Robot/Image 11.PNG",
-                            "images/Projects/Quadruped Robot/Image 12.PNG",
-                            "images/Projects/Quadruped Robot/Image 13.PNG",
-                            "images/Projects/Quadruped Robot/Image 14.PNG",
-                            "images/Projects/Quadruped Robot/Image 15.PNG",
-                            "images/Projects/Quadruped Robot/Image 16.PNG",
-                            "images/Projects/Quadruped Robot/Image 17.PNG",
-                            "images/Projects/Quadruped Robot/Image 18.PNG",
+                            "images/Projects/Quadruped Robot/Image 01.jpg",
+                            "images/Projects/Quadruped Robot/Image 02.jpg",
+                            "images/Projects/Quadruped Robot/Image 03.jpg",
+                            "images/Projects/Quadruped Robot/Image 04.jpg",
+                            "images/Projects/Quadruped Robot/Image 05.jpg",
+                            "images/Projects/Quadruped Robot/Image 06.jpg",
+                            "images/Projects/Quadruped Robot/Image 07.jpg",
+                            "images/Projects/Quadruped Robot/Image 08.jpg",
+                            "images/Projects/Quadruped Robot/Image 09.jpg",
+                            "images/Projects/Quadruped Robot/Image 10.jpg",
+                            "images/Projects/Quadruped Robot/Image 11.jpg",
+                            "images/Projects/Quadruped Robot/Image 12.jpg",
+                            "images/Projects/Quadruped Robot/Image 13.jpg",
+                            "images/Projects/Quadruped Robot/Image 14.jpg",
+                            "images/Projects/Quadruped Robot/Image 15.jpg",
+                            "images/Projects/Quadruped Robot/Image 16.jpg",
+                            "images/Projects/Quadruped Robot/Image 17.jpg",
+                            "images/Projects/Quadruped Robot/Image 18.jpg",
                         ],
                         imageDescriptions: [
                             "The Quadruped Robot",
@@ -359,17 +359,17 @@
                         title: "Introducing The Night-Guard 360 Sentinel: Advanced Autonomous Surveillance Robot",
                         description: "This project focuses on the integration of Surveillance Technology and Machine Learning into a compact robotic system with two primary applications. Firstly, it serves as an autonomous search and rescue robot capable of independently navigating an area, detecting individuals using object recognition, and sending instant email alerts with the person's image and robot's location. Secondly, it functions as a home security robot, patrolling and identifying intruders within a household, sounding alarms, and sending email notifications. To ensure protection, it incorporates an electrical taser defense mechanism. The robot features both regular and night vision cameras, utilizes Python, OpenCV, and TensorFlow for its implementation, and can be controlled through a user-friendly application via Wi-Fi connectivity. With potential applications in military and security contexts, it offers a versatile solution for monitoring individuals or critical areas, enhancing safety, and security measures while minimizing human risk.",
                         images: [
-                            "images/Projects/Nightgaurd360/Image 01.PNG",
-                            "images/Projects/Nightgaurd360/Image 02.PNG",
-                            "images/Projects/Nightgaurd360/Image 03.PNG",
-                            "images/Projects/Nightgaurd360/Image 04.PNG",
-                            "images/Projects/Nightgaurd360/Image 05.PNG",
-                            "images/Projects/Nightgaurd360/Image 06.PNG",
-                            "images/Projects/Nightgaurd360/Image 07.PNG",
-                            "images/Projects/Nightgaurd360/Image 08.PNG",
-                            "images/Projects/Nightgaurd360/Image 09.PNG",
-                            "images/Projects/Nightgaurd360/Image 10.PNG",
-                            "images/Projects/Nightgaurd360/Image 11.PNG",
+                            "images/Projects/Nightgaurd360/Image 01.jpg",
+                            "images/Projects/Nightgaurd360/Image 02.jpg",
+                            "images/Projects/Nightgaurd360/Image 03.jpg",
+                            "images/Projects/Nightgaurd360/Image 04.jpg",
+                            "images/Projects/Nightgaurd360/Image 05.jpg",
+                            "images/Projects/Nightgaurd360/Image 06.jpg",
+                            "images/Projects/Nightgaurd360/Image 07.jpg",
+                            "images/Projects/Nightgaurd360/Image 08.jpg",
+                            "images/Projects/Nightgaurd360/Image 09.jpg",
+                            "images/Projects/Nightgaurd360/Image 10.jpg",
+                            "images/Projects/Nightgaurd360/Image 11.jpg",
                         ],
                         imageDescriptions: [
                             "The Nightgaurd360 Surveillance Robot",
@@ -389,13 +389,13 @@
                         title: "Development of a 3D printed Stepper Motor Based Cycloidal Drive",
                         description: "In this exciting project, I embarked on the journey of designing and fabricating not one, but three iterations of a sophisticated cycloidal drive entirely from scratch using SolidWorks and my trusty Ender 3 V2 3D printer. Crafting this intricate mechanism posed a formidable challenge, given its multitude of intricate moving components, calling for an array of precisely sized bearings to ensure its flawless operation. The culmination of this laborious effort resulted in a cycloidal drive capable of theoretically amplifying the torque output of the stepper motor by an impressive 20-fold, transcending its initial 42 Nm. This innovation achieved an outstanding efficiency rating ranging from 70% to 80%, underlining the mechanical and structural precision required throughout the intricate modeling process. Tolerances, tolerances, tolerances! This project was a testament to the intricacies of mechanical design and the boundless possibilities of 3D printing technology.",
                         images: [
-                            "images/Projects/Cycloidal Drive/Image 01.PNG",
-                            "images/Projects/Cycloidal Drive/Image 02.PNG",
-                            "images/Projects/Cycloidal Drive/Image 03.PNG",
-                            "images/Projects/Cycloidal Drive/Image 04.PNG",
-                            "images/Projects/Cycloidal Drive/Image 05.PNG",
-                            "images/Projects/Cycloidal Drive/Image 06.PNG",
-                            "images/Projects/Cycloidal Drive/Image 07.PNG",
+                            "images/Projects/Cycloidal Drive/Image 01.jpg",
+                            "images/Projects/Cycloidal Drive/Image 02.jpg",
+                            "images/Projects/Cycloidal Drive/Image 03.jpg",
+                            "images/Projects/Cycloidal Drive/Image 04.jpg",
+                            "images/Projects/Cycloidal Drive/Image 05.jpg",
+                            "images/Projects/Cycloidal Drive/Image 06.jpg",
+                            "images/Projects/Cycloidal Drive/Image 07.jpg",
                         ],
                         imageDescriptions: [
                             "3D Design of the Cycloidal Drive",
