--- a/achievements.html
+++ b/achievements.html
@@ -17,12 +17,33 @@
 		</script>
 
 		<title>Achievements of Moeen Ul Islam</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 		<style>
+            @media (max-width: 768px) {
+                .project-list {
+                    width: 100%; /* Take up full width on mobile */
+                }
+
+                .project-details {
+                    width: 100%; /* Take up full width on mobile */
+                }
+
+                #prevButton, #nextButton {
+                    left: 10px;
+                    right: 10px; /* Adjust button positioning for better mobile spacing */
+                }
+            }
+
+            img {
+                max-width: 100%;
+                height: auto;
+            }
+
 			#image-container {
                 display: flex;
                 flex-direction: column;
