--- a/achievements.html
+++ b/achievements.html
@@ -17,7 +17,7 @@
 		</script>
 
 		<title>Achievements of Moeen Ul Islam</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=1024">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
