--- a/achievements.html
+++ b/achievements.html
@@ -17,25 +17,28 @@
 		</script>
 
 		<title>Achievements of Moeen Ul Islam</title>
-        <meta name="viewport" content="width=1024">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 		<style>
+            body {
+                font-size: 16px;
+            }
             @media (max-width: 768px) {
                 .project-list {
-                    width: 100%; /* Take up full width on mobile */
+                    width: 80%; /* Take up full width on mobile */
                 }
 
                 .project-details {
-                    width: 100%; /* Take up full width on mobile */
+                    width: 80%; /* Take up full width on mobile */
                 }
 
                 #prevButton, #nextButton {
-                    left: 10px;
-                    right: 10px; /* Adjust button positioning for better mobile spacing */
+                    left: 30px;
+                    right: 30px; /* Adjust button positioning for better mobile spacing */
                 }
             }
 
