--- a/generic.html
+++ b/generic.html
@@ -155,11 +155,11 @@
 										<p><b>Awarded the "Deans Award" for the best Capstone Project</b></p>
 									</article>
 									<article>
-										<a href="projects.html" title ="Projects: Quadureped Robot" class="image"><img src="images/Quadruped Thumbnail.jpg" alt="" /></a>
+										<a href="projects_index.html" title ="Projects: Quadureped Robot" class="image"><img src="images/Quadruped Thumbnail.jpg" alt="" /></a>
 										<p><b>Multi-Functional Quadruped Robot with Advanced Locomotion, Remote Operability and Cognitive Capabilities</b></p>
 									</article>
 									<article>
-										<a href="projects.html" title ="Projects: Night-Guard 360 Sentinel" class="image"><img src="images/Night-Guard 360.jpg" alt="" /></a>
+										<a href="projects_index.html" title ="Projects: Night-Guard 360 Sentinel" class="image"><img src="images/Night-Guard 360.jpg" alt="" /></a>
 										<p><b>Introducing The Night-Guard 360 Sentinel: Advance Autonomus Surveillance Robot</b></p>
 									</article>
 								</div>
