--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
 							<footer id="footer" style="background-color: #333; padding: 10px;">
 								<p class="copyright" style="color: #fff; text-align: center; margin: 0;">
-									&copy; All rights reserved | Created by <b style ="color:rgb(255, 255, 255)">Moeen Ul Islam</b> | Built: Oct 28, 2023 | Last Updated: Nov 9, 2023
+									&copy; All rights reserved | Created by <b style ="color:rgb(255, 255, 255)">Moeen Ul Islam</b> | Built: Oct 28, 2023 | Last Updated: Nov 17, 2023
 								</p>
 							</footer>		
 						</div>
@@ -201,7 +201,7 @@
 									<ul>
 										<li><a href="index.html" style="color: #000000;">Homepage</a></li>
 										<li><a href="projects_index.html" style="color: #000000;">Projects</a></li>
-										<li><a href="achievements.html" style="color: #000000;">Achievements</a></li>
+										<li><a href="achievements_index.html" style="color: #000000;">Achievements</a></li>
 										<li>
 											<span class="opener" style="color: #000000;">Competitions</span>
 											<ul>
@@ -213,7 +213,7 @@
 										</li>
 										<li><a href="notdeveloped.html" style="color: #000000;">Fields of Interest</a></li>
 										<li><a href="notdeveloped.html" style="color: #000000;">Publications</a></li>
-										<li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank" style="color: #000000;">Resume</a></li>
+										<li><a href="https://drive.google.com/file/d/17LY-CSfBv1PS7pn2vEMGtH5DsltEV3TL/view?usp=sharing" target="_blank" style="color: #000000;">Resume</a></li>
 									</ul>
 								</nav>
 
@@ -224,7 +224,7 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="achievements.html" title ="Achievements: Dean's Award" class="image"><img src="images/Best Project.jpg" alt="" /></a>
+											<a href="achievements_index.html" title ="Achievements: Dean's Award" class="image"><img src="images/Best Project.jpg" alt="" /></a>
 											<p><b>Awarded the "Deans Award" for the best Capstone Project</b></p>
 										</article>
 										<article>
