--- a/generic.html
+++ b/generic.html
@@ -140,7 +140,7 @@
 									</li>
 									<li><a href="notdeveloped.html">Fields of Interest</a></li>
 									<li><a href="notdeveloped.html">Publications</a></li>
-									<li><a href="https://drive.google.com/file/d/1O7GQjVPY8hIKv11SUmSpBl-k42eYI0zb/view?usp=sharing" target="_blank">Resume</a></li>
+									<li><a href="https://drive.google.com/file/d/17LY-CSfBv1PS7pn2vEMGtH5DsltEV3TL/view?usp=sharing" target="_blank">Resume</a></li>
 								</ul>
 							</nav>
 
@@ -151,7 +151,7 @@
 								</header>
 								<div class="mini-posts">
 									<article>
-										<a href="achievements.html" title ="Achievements: Dean's Award" class="image"><img src="images/Best Project.jpg" alt="" /></a>
+										<a href="achievements_index.html" title ="Achievements: Dean's Award" class="image"><img src="images/Best Project.jpg" alt="" /></a>
 										<p><b>Awarded the "Deans Award" for the best Capstone Project</b></p>
 									</article>
 									<article>
