--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                         <li><a href="notdeveloped.html" target="_blank" class="fab fa-researchgate" title="ResearchGate" style="font-size: 20px;"></a></li>
                                         <li><a href="https://github.com/moeen14" target="_blank" class="fab fa-github" title="GitHub" style="font-size: 20px;"></a></li>
                                         <li><a href="https://www.facebook.com/profile.php?id=100073217057451&mibextid=ZbWKwL" target="_blank" class="fab fa-facebook" title="Facebook" style="font-size: 20px;"></a></li>
-                                        <li><a href="https://drive.google.com/file/d/17LY-CSfBv1PS7pn2vEMGtH5DsltEV3TL/view?usp=sharing" target="_blank" class="fas fa-file" title="Resume" style="font-size: 20px;"></a></li>
+                                        <li><a href="https://drive.google.com/file/d/19fgpbnKcEASh4at2VJVVbWVW4k8BhxYo/view?usp=drive_link" target="_blank" class="fas fa-file" title="Resume" style="font-size: 20px;"></a></li>
 									</ul>
 								</header>
 
